--- a/config
+++ b/config
@@ -5,7 +5,7 @@ database="this_is_database"
 
 # influxdb
 influxdb="true"
-influxdb_host="localhost"
+influxdb_host="http://localhost"
 influxdb_port="8086"
 influxdb_database=`hostname`
 influxdb_user="user"
@@ -13,5 +13,5 @@ influxdb_password="password"
 
 # opentsdb
 opentsdb="false"
-opentsdb_host="localhost"
+opentsdb_host="http://localhost"
 opentsdb_port="4242"
