🏪 change default influxdb port number

--- a/etc/ustat.conf
+++ b/etc/ustat.conf
@@ -1,6 +1,6 @@
 # ustat config file
 [agent]
-  interval="5s"
+  interval="10s"
   round_interval=true
   metric_batch_size=1000
   metric_buffer_limit=10000
@@ -15,8 +15,8 @@
   omit_hostname=false
 
 [[outputs.influxdb]]
-  urls = ["http://localhost:58086"]
-  database = "database_name"
+  urls = ["http://localhost:8086"]
+  database = "localhost"
   retention_policy = ""
   write_consistency = "any"
   timeout = "3s"
